--- a/box-example/box.yml
+++ b/box-example/box.yml
@@ -1,5 +1,6 @@
 ---
 - hosts: www
+  gather_facts: False
 
   vars:
     - root_dir: ..
@@ -10,6 +11,17 @@
   pre_tasks:
     - debug: msg="{{custom_mongo_family}} - {{custom_mongo_version}}"
 
+    - name: ANSIBLE PYTHON | install python 2
+      raw: test -e /usr/bin/python || (apt -qqy update && apt install -qy python-minimal)
+      become: yes
+
+    - name:  UNPRIVILEGED USERS | Get acl dependency (ansible unprivileged user operations magic)
+      apt: pkg="acl"
+      become: yes
+
+    - name: gather facts
+      setup:
+
   roles:
      - {
          role: "sa-mongo",
@@ -18,7 +30,7 @@
          mongo_family:  "{{custom_mongo_family}}"
        }
      - {
-         role: "sa-pritunl"
+         role: "sa-vpn-pritunl"
        }
 
 
