--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,5 +1,7 @@
 ---
-- hosts: localhost
-  remote_user: root
+- hosts: all
   roles:
-    - sa-vpn-pritunl
+    - {
+        role: "role_under_test",
+        docker_test: true
+      }
