improve(tests) bionic support

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -25,9 +25,10 @@ galaxy_info:
       versions:
         - trusty
         - xenial
-#    - name: EL
-#      versions:
-#      - 7
+        - bionic 
+    - name: EL
+      versions:
+        - 7
 #      - 6
   galaxy_tags:
     - pritunl
