--- a/tasks/tasks_pritunl.yml
+++ b/tasks/tasks_pritunl.yml
@@ -74,18 +74,18 @@
 
   - block:
 
-    - name: PRITUNL | Install pritunl repo
-      apt_repository:
-        repo: deb http://repo.pritunl.com/stable/apt xenial main
-        state: present
-        filename: pritunl
-        state: present
+    - name: PRITUNL | Install key
+      apt_key: keyserver=keyserver.ubuntu.com id="CF8E292A"
       become: yes
       tags:
         - pritunl
 
-    - name: PRITUNL | Install key
-      apt_key: keyserver=keyserver.ubuntu.com id="CF8E292A"
+    - name: PRITUNL | Install pritunl repo
+      apt_repository:
+        repo: "deb http://repo.pritunl.com/stable/apt {{ansible_distribution_release}} main"
+        state: present
+        filename: pritunl
+        state: present
       become: yes
       tags:
         - pritunl
