improve(tests) centos7 - missing playbook env variable?

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ env:
     version='7'
     init='/usr/lib/systemd/systemd'
     run_opts='--privileged'
-#    playbook='test.yml'
+    playbook='test.yml'
 #  - distribution: alpine
 #    version: 3.4
 #    init: /sbin/init
