adjusted to recent test matrix

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -23,7 +23,7 @@ galaxy_info:
   platforms:
     - name: Ubuntu
       versions:
-        - trusty
+#        - trusty
         - xenial
         - bionic
     - name: EL
