--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,23 @@
 box-example/roles
 *.retry
-local_*.sh
+tempfile
+local*.sh
+.idea
+__pycache__
+**/*/__pycache__
+*.pyc
+*/**/.terraform
+releases
+roles/**/box-example
+roles/**/molecule
+roles/**/tests/
+roles/**/meta
+roles/**/.travis.yml
+roles/**/.gitignore
+roles/**/Pipfile*
+roles/**/.ansible-lint
+*.bak
+*.gz
+*.tar.gz
+*.tgz
+.venv
